# loss-landscapes

./: .gitignore  LICENCE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
examples/: batch-normalization.ipynb  core-features-gpu.ipynb  core-features.ipynb  linear-interpolation.ipynb  neural-network-reduction.ipynb  return-landscape.ipynb  trajectories.ipynb
loss_landscapes/: __init__.py  advanced.py  compute.py  connecting_paths.py  landscapes.py  lines.py  main.py  nn.py  rl.py  saddle_points.py  state_representation.py  trajectories.py
loss_landscapes/backends/: backend.py  backend_dispatch.py
loss_landscapes/connecting_paths/: __init__.py  connecting_paths.py
loss_landscapes/contrib/: connecting_paths.py  trajectories.py
loss_landscapes/evaluators/: __init__.py  evaluator.py  supervised_evaluators.py
loss_landscapes/linalg/: vectors.py
loss_landscapes/metrics/: __init__.py  metric.py  rl_metrics.py  sl_metrics.py
loss_landscapes/model_interface/: agent_interface.py  model_agnostic_factories.py  model_interface.py  model_parameters.py  model_tensor.py  model_vector.py  model_wrapper.py  parameter_vector.py  tensor_factory.py
loss_landscapes/model_metrics/: __init__.py  metric.py  metrics.py  rl_metrics.py  sl_metrics.py
loss_landscapes/saddle_points/: __init__.py
loss_landscapes/sl/: connecting_paths.py  landscapes.py  trajectories.py
loss_landscapes/trajectories/: __init__.py  trackers.py
loss_landscapes/utils/: __init__.py  formats.py  model_interface.py  parameter_vector.py  type_checks.py
tests/: loss_contours.py
(+40 files in other folders)
