[metadata]
# This includes the license file(s) in the wheel.
license_files = LICENSE.txt

[bdist_wheel]


# support. Removing this line (or setting universal to 0) will prevent

# bdist_wheel from trying to make a universal wheel. For more see:

# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels

universal=0